# webserv

./: CMakeLists.txt  IConfigParse.hpp  IReportError.hpp  LocationBlock.cpp  LocationBlock.hpp  Makefile  ServerBlock.cpp  ServerBlock.hpp  Webserv  arch  config.cpp  config.hpp  exceptions.hpp  main.cpp  serve.hpp  test.conf  toDo  webserv
cgi/: download.py  upload.py
configs/: default.conf  test.conf
includes/: Headers.hpp  IReportError.hpp  LocationBlock.hpp  Mime.hpp  ServerBlock.hpp  Utils.hpp  config.hpp
includes/parsing/: Config.hpp  Config2.hpp  LocationBlock.hpp  LocationBlock2.hpp  LocationBlockKeymap.hpp  ServerBlock.hpp  ServerBlock2.hpp  ServerBlockKeymap.hpp  blockPrinter.hpp  cluster.hpp  config.hpp  errorHandler.hpp  exceptions.hpp  loca.hpp  parsingUtils.hpp  parsingValidator.hpp  serve.hpp
includes/request/: Request.hpp  RequestParsing.hpp
includes/sockets/: CGI.hpp  DataStorage.hpp  SocketListener.hpp  WebServer.hpp  Webserv.hpp  cli.hpp  req.hpp  res.hpp  web.hpp
src/: LocationBlock.cpp  ServerBlock.cpp  config.cpp  main.cpp
src/parsing/: config.cpp
src/request/: Request.cpp  RequestParsing.cpp
src/sockets/: SocketListener.cpp  Webserv.cpp
srcs/: Mime.cpp  Utils.cpp  main.cpp
srcs/parsing/: Config.cpp  Config2.cpp  LocationBlock.cpp  LocationBlock2.cpp  LocationBlockKeymap.cpp  ServerBlock.cpp  ServerBlock2.cpp  ServerBlockKeymap.cpp  cluster.cpp  config.cpp  loca.cpp  serve.cpp
srcs/request/: Request.cpp  RequestParsing.cpp
srcs/sockets/: CGI.cpp  DataStorage.cpp  SocketListener.cpp  WebServer.cpp  (+4 more)
www/: index.css  index.html
(+29 files in other folders)
